service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-microproject-service
spec:
  selector:
    app: k8s-microproject
  ports:
    - protocol: TCP
      port: 3000          
      targetPort: 3000   
  type: LoadBalancer
